# BitcoinTxIndexer

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 001_initial_schema.sql
src/: config.rs  lib.rs  main.rs
src/api/: graphql.rs  mod.rs  rest.rs
src/db/: mod.rs  models.rs  postgress.rs
src/indexer/: bitcoin.rs  mod.rs  runes.rs
src/utils/: error.rs  mod.rs
