[package]
name = "starknet-btc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin libraries
bitcoin = "0.31"
bitcoincore-rpc = "0.18"

hyper = { version = "0.14", features = ["full"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# GraphQL
async-graphql = "6.0"
async-graphql-axum = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }